# StockWatch

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  HistoricalDataObj.cpp  HistoricalDataObj.h  README  README.md  RetrieveHistoricalData.cpp  RetrieveHistoricalData.h  RetrieveStockSymbols.cpp  RetrieveStockSymbols.h  build.sh  main.cpp
Include/StockWatch/: Api.hpp  HistoricalData.hpp  Stock.hpp  StockSymbols.hpp  StockWatch.hpp
Source/: Analyze.cpp  HistoricalData.cpp  Stock.cpp  StockSymbols.cpp  StockWatch.cpp  main.cpp
Source/Utility/: CMakeLists.txt  CmdLineOpt.cpp  CmdLineOptions.cpp  WriteReadFile.cpp
Source/Utility/Include/Utility/: CmdLineOpt.hpp  Utility.hpp  WriteReadFile.hpp
Test/: CMakeLists.txt  TestCreateSymbolList.cpp  TestExhibitsHTF.cpp  TestFetchHistoricalData.cpp  TestInputData.cpp  TestOptionsParser.cpp  TestReadFile.cpp  TestWriteFile.cpp  TestWriteRead.cpp
include/stockwatch/: analyze_stocks.hpp  api.hpp  get_historical_data.hpp  get_stock_symbols.hpp  options.hpp  stock.hpp  stockwatch.hpp  world_trading_api.hpp  world_trading_data.hpp
include/utility/: create_directory.hpp  directory.hpp  file.hpp  files.hpp  http_request.hpp  manual.hpp  options.hpp  parse_cmd_line_options.hpp  progress_bar.hpp  read_write_files.hpp  utility.hpp
src/: CMakeLists.txt  main.cc  main.cpp
src/cc/: CMakeLists.txt
src/cc/finnhub/: CMakeLists.txt  curl.cc  finnhub.cc  finnhub_server.cc
src/cc/finnhub/include/finnhub/: curl.h  finnhub.h  finnhub_server.h
src/cc/patterns/: CMakeLists.txt  high_tight_flag.cc  pattern_detector.cc
src/cc/patterns/include/patterns/: high_tight_flag.h  pattern_detector.h
src/cc/stockwatch/: CMakeLists.txt  main.cc  stock.cc  stock_watch.cc
src/cc/stockwatch/include/stockwatch/: stock.h  stock_watch.h
src/cmake/: protoGenMacro.cmake
src/cxxopts/: cxxopts.h
src/proto/: CMakeLists.txt  candle.proto  finnhub_resources.proto  finnhub_service.proto  ticker_list.proto
src/stockwatch/: CMakeLists.txt  analyze_stocks.cpp  api.cpp  candle.cc  candle.h  config.cc  config.h  finnhub.cc  finnhub.h  get_historical_data.cpp  get_stock_symbols.cpp  options.cpp  pattern_detector.cc  pattern_detector.h  postgres.cc  postgres.h  stock.cc  stock.cpp  stock.h  stock_watch.cc  stock_watch.h  stockwatch.cc  stockwatch.cpp  stockwatch.h  world_trading_api.cpp  world_trading_data.cpp
src/stockwatch/finnhub/: service.cc  service.h
src/stockwatch/include/stockwatch/: finnhub.h  pattern_detector.h  stock.h  stock_watch.h
src/stockwatch/include/stockwatch/util/curl/: curl.h
src/stockwatch/include/stockwatch/util/cxxopts/: cxxopts.h
src/stockwatch/pattern/: high_tight_flag.cc  high_tight_flag.h
src/stockwatch/patterns/: high_tight_flag.cc  high_tight_flag.h  pattern.cc  pattern.h
src/stockwatch/postgres/: data_base.cc  data_base.h  query.h
src/stockwatch/postgres/migrations/: high_tight_flags_up.pgsql  stockwatch_up_1.pgsql
src/stockwatch/util/curl/: curl.cc  curl.h  email.cc  email.h  http.cc  http.h
src/stockwatch/util/io/: io.cc  io.h
src/stockwatch/util/json/: json.cc  json.h
src/stockwatch/util/postgres/: query.h
src/stockwatch/util/time/: time.cc  time.h
src/utility/: CMakeLists.txt  create_directory.cpp  directory.cpp  file.cpp  files.cpp  http_request.cpp  manual.cpp  options.cpp  parse_cmd_line_options.cpp  progress_bar.cpp  read_write_files.cpp
test/: CMakeLists.txt  get_stock_symbols_test.cpp  main.cc  test_exhibits_high_tight_flag.cpp  test_get_cmd_line_options.cpp  test_get_historical_data.cpp  test_get_stock_list.cpp  test_get_stock_symbols.cpp  test_input_historical_data.cpp  test_options_parser.cpp  test_parse_cmd_line_options.cpp  test_progress_bar.cpp  test_read_file.cpp  test_read_from_file.cpp  test_write_file.cpp  test_write_to_file.cpp
